ng-service.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: NAMESPACE
---
apiVersion: v1
kind: Service
metadata:
  name: ng-svc
  namespace: NAMESPACE
  labels:
    app: nginx
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 80
    Protocol: TCP
