ng-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ng-ingress
  namespace: nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ingress.global-static-ip-name: "ng-static-ip"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: ng-service
          servicePort: NODEPORT
